--- a/MUN.html
+++ b/MUN.html
@@ -163,7 +163,7 @@
 <body>
   <header class="mheader">
     <a href="https://schoolofindia.com" target="_blank">
-      <img src="../soilogo.png" alt="School of India Logo">
+      <img src="img/soilogo.png" alt="School of India Logo">
     </a>
     <h1>ComMUNity</h1>
   </header>
@@ -177,7 +177,7 @@
 
   <div class="mentors">
     <div class="mentor">
-      <img src="../udbhav.jpeg" alt="Udbhav Alam">
+      <img src="img/udbhav.jpeg" alt="Udbhav Alam">
       <h2>Udbhav Alam | President</h2>
       <p>Dear Members,
 
@@ -195,7 +195,7 @@ President, SOI ComMUNity</p>
     </div>
 
     <div class="mentor">
-      <img src="../nafisaa.jpeg" style="object-position: top;" alt="Nafisa">
+      <img src="img/nafisaa.jpeg" style="object-position: top;" alt="Nafisa">
       <h2>Nafisa | Vice President</h2>
       <p>Hey,
 <br>
