--- a/art-pallete.html
+++ b/art-pallete.html
@@ -144,7 +144,7 @@
 
   <header class="mheader">
     <a href="https://schoolofindia.com" target="_blank">
-      <img class="soi-logo" src="../soilogo.png">
+      <img class="soi-logo" src="img/soilogo.png">
     </a>
     <h1 onclick="window.location.href='index.html'">ART PALETTE</h1>
   </header>
@@ -168,7 +168,7 @@
   <div class="mentors">
 
     <div class="mentor">
-      <img src="../Kshitija.jpeg" style="object-position: top;">
+      <img src="image/Kshitija.jpeg" style="object-position: top;">
       <h2>Kshitija-President</h2>
       <p>
 As the President of Art Palette, I see art as a form of expression rather than perfection. For me, it’s about ideas, emotions, and personal style. I want Art Palette to be a space where creativity feels comfortable, experimentation is encouraged, and every artist feels confident sharing their work. My aim is to help students grow, collaborate, and find their own artistic voice. Together, I hope to build a community where creativity is valued, supported, and constantly evolving.<br><br>Warm Regards,<br>Kshitija
@@ -176,7 +176,7 @@ As the President of Art Palette, I see art as a form of expression rather than p
     </div>
 
     <div class="mentor">
-      <img src="../Zoya.jpeg">
+      <img src="image/Zoya.jpeg">
       <h2>Butul Zaidi-Vice President</h2>
       <p>
         "The pen is mightier than the sword” is a line I’ve heard since childhood, growing up with parents in law
@@ -196,7 +196,7 @@ As the President of Art Palette, I see art as a form of expression rather than p
     </div>
 
     <div class="mentor">
-      <img src="../Devanshi.jpeg">
+      <img src="image/Devanshi.jpeg">
       <h2>Devanshi-Vice President</h2>
       <p>
         Art, my dearest empathiser;
