--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Tech Club</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <link rel="icon" href="../fvcn.png" type="image/png">
+    <link rel="icon" href="img/fvcn.png" type="image/png">
 
     <!-- Montserrat -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -44,7 +44,7 @@
         <div class = "soi"> <!--School Of India Logo-->
             <div class="wrapper">
                 <a href="https://schoolofindia.com" target="_blank">
-                    <img class = "soi-logo" src="../soilogo.png">
+                    <img class = "soi-logo" src="img/soilogo.png">
                 </a>
             </div>
             <div class="wrapper">
@@ -65,7 +65,7 @@
             </div>
             <div class="wrapper">
                 <a href="index.html">
-                    <img class="club-logo" src="../club-logo.png">
+                    <img class="club-logo" src="img/club-logo.png">
                 </a>
             </div>
         </div>
@@ -87,34 +87,34 @@
 <div class = "main-container">
     <!-- Content -->
     <div class="Gallery">
-        <img src="../IMG_2729.JPG">
-        <img src="../IMG_2730.JPG">
-        <img src="../IMG_2731.JPG">
-        <img src="../IMG_2732.JPG">
-        <img src="../IMG_2733.JPG">
-        <img src="../IMG_2734.JPG">
-        <img src="../IMG_2736.JPG">
-        <img src="../IMG_2737.JPG">
-        <img src="../IMG_2738.JPG">
-        <img src="../IMG_2739.JPG">
-        <img src="../IMG_2740.JPG">
-        <img src="../IMG_2741.JPG">
-        <img src="../IMG_2742.JPG">
-        <img src="../IMG_2744.JPG">
-        <img src="../IMG_2748.JPG">
-        <img src="../IMG_2750.JPG">
-        <img src="../IMG_2751.JPG">
-        <img src="../IMG_2752.JPG">
-        <img src="../IMG_2753.JPG">
-        <img src="../IMG_2757.JPG">
-        <img src="../IMG_2758.JPG">
-        <img src="../IMG_2759.JPG">
-        <img src="../IMG_2762.JPG">
-        <img src="../IMG_2763.JPG">
-        <img src="../WhatsApp Image 2025-11-19 at 3.08.20 PM.jpeg">
-        <img src="../WhatsApp Image 2025-11-19 at 3.08.21 PM.jpeg">
-        <img src="../WhatsApp Image 2025-11-19 at 3.08.22 PM.jpeg">
-        <img src="../WhatsApp Image 2025-11-19 at 3.08.23 PM.jpeg">
+        <img src="img/IMG_2729.JPG">
+        <img src="img/IMG_2730.JPG">
+        <img src="img/IMG_2731.JPG">
+        <img src="img/IMG_2732.JPG">
+        <img src="img/IMG_2733.JPG">
+        <img src="img/IMG_2734.JPG">
+        <img src="img/IMG_2736.JPG">
+        <img src="img/IMG_2737.JPG">
+        <img src="img/IMG_2738.JPG">
+        <img src="img/IMG_2739.JPG">
+        <img src="img/IMG_2740.JPG">
+        <img src="img/IMG_2741.JPG">
+        <img src="img/IMG_2742.JPG">
+        <img src="img/IMG_2744.JPG">
+        <img src="img/IMG_2748.JPG">
+        <img src="img/IMG_2750.JPG">
+        <img src="img/IMG_2751.JPG">
+        <img src="img/IMG_2752.JPG">
+        <img src="img/IMG_2753.JPG">
+        <img src="img/IMG_2757.JPG">
+        <img src="img/IMG_2758.JPG">
+        <img src="img/IMG_2759.JPG">
+        <img src="img/IMG_2762.JPG">
+        <img src="img/IMG_2763.JPG">
+        <img src="img/WhatsApp Image 2025-11-19 at 3.08.20 PM.jpeg">
+        <img src="img/WhatsApp Image 2025-11-19 at 3.08.21 PM.jpeg">
+        <img src="img/WhatsApp Image 2025-11-19 at 3.08.22 PM.jpeg">
+        <img src="img/WhatsApp Image 2025-11-19 at 3.08.23 PM.jpeg">
      </div>
 </div>
     <footer class="credts">
