--- a/roots-n-rythm.html
+++ b/roots-n-rythm.html
@@ -147,7 +147,7 @@
         <header>
 
                 <a href="https://schoolofindia.com" target="_blank">
-                    <img class = "soi-logo" src="../soilogo.png">
+                    <img class = "soi-logo" src="img/soilogo.png">
                 </a>
             <h1>Roots And Rhythms</h1>
 
@@ -190,7 +190,7 @@ Warm Regards,<br>Anshika
             </div>
             
             <div class="mentor">
-                <img class="about-me-img" src="../Vaibhavii.jpg">
+                <img class="about-me-img" src="img/Vaibhavii.jpg">
                 <h2 class = "headings-pg2" style = "font-size: 25px;">Vaibhavi-Secratary</h2>
                 <p class = "content-2">Hi Everyone, So I’m Vaibhavi Nideesh from Grade 9, and I’m the Secretary of our school’s Rhythm and Roots Club.
                      Dance has always been my biggest passion,it’s where I find joy, confidence, and freedom to express myself.
@@ -203,7 +203,7 @@ Warm Regards,<br>Anshika
                 <br>Thank You</p>
             </div>
             <div class="mentor">
-                <img class="about-me-img" src="../Dhruv.jpeg">
+                <img class="about-me-img" src="img/Dhruv.jpeg">
                 <h2 class = "headings-pg2" style = "font-size: 25px;">Dhruv-Secratary</h2>
                 <p class = "content-2">I’m Dhruv from Grade 9, and I’m honoured to serve as the Secretary of the Rhythm and Roots Dance Club. Dance is where I feel most alive—it gives me confidence, creativity, and the freedom to express who I truly am. Being part of this club has taught me discipline, teamwork, and the importance of staying dedicated to what you love. As Secretary, I strive to support our team, organize events smoothly, and help keep the spirit and energy of our club strong. Dance inspires me to improve every day, to never give up, and to spread that passion to others. For me, dance isn’t just something I do.
                 <br>
