--- a/e-rotatary.html
+++ b/e-rotatary.html
@@ -147,7 +147,7 @@ header img {
         <header>
 
                 <a href="https://schoolofindia.com" target="_blank">
-                    <img class = "soi-logo" src="../soilogo.png">
+                    <img class = "soi-logo" src="img/soilogo.png">
                 </a>
             <h1>Rotary Interact Club</h1>
 
@@ -201,7 +201,7 @@ Warm Regards,<br>Aditi
                 <p class = "content-2">1)Director of Awareness:Ira <br>2)Director of Communication:Saanvi <br>3)Director of Social Media:Disha,unknown 
             </div>
             <!-- <div class="mentor">
-                <img class="about-me-img" src="../mentor5.png">
+                <img class="about-me-img" src="img/mentor5.png">
                 <h2 class = "headings-pg2" style = "font-size: 25px;">Dhruv-Secratary</h2>
                 <p class = "content-2">Short bio or subject expertise.</p>
             </div> -->
