--- a/entrepreneurship.html
+++ b/entrepreneurship.html
@@ -117,7 +117,7 @@
 
   <header>
     <a href="https://schoolofindia.com" target="_blank">
-      <img class="soi-logo" src="../soilogo.png">
+      <img class="soi-logo" src="img/soilogo.png">
     </a>
     <h1>Entrepreneurship Club</h1>
   </header>
