--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Tech Club</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <link rel="icon" href="../fvcn.png" type="image/png">
+    <link rel="icon" href="img/fvcn.png" type="image/png">
 
     <!-- Montserrat -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -44,7 +44,7 @@
         <div class = "soi"> <!--School Of India Logo-->
             <div class="wrapper">
                 <a href="https://schoolofindia.com" target="_blank">
-                    <img class = "soi-logo" src="../soilogo.png">
+                    <img class = "soi-logo" src="img/soilogo.png">
                 </a>
             </div>
             <div class="wrapper">
@@ -65,7 +65,7 @@
             </div>
             <div class="wrapper">
                 <a href="index.html">
-                    <img class="club-logo" src="../club-logo.png">
+                    <img class="club-logo" src="img/club-logo.png">
                 </a>
             </div>
         </div>
