--- a/science.html
+++ b/science.html
@@ -102,7 +102,7 @@
 <body>
   <header>
     <a href="https://schoolofindia.com" target="_blank">
-      <img class="soi-logo" src="../soilogo.png">
+      <img class="soi-logo" src="img/soilogo.png">
     </a>
     <h1>Science Club</h1>
   </header>
