organized all files, organized gallery, fixed consistency issues in 'clubs' and other places

--- a/clubs.html
+++ b/clubs.html
@@ -87,14 +87,14 @@
 <div class = "main-container">
     <div class="info-container">
             <div class="portrait">
-                <img class="about-me-img" src="img/shalini ma'am.jpg">
+                <img class="about-me-img" src="img/shalini.jpg">
             </div>
             <div class="about">
                 <h2 class = "headings-pg2" style = "text-align: right;">Shalini Ahuja | Senior Mistress</h2>
                 <p style = "text-align: right;">
-                    Greetings Everyone,<br>It gives me immense pleasure to introduce our school clubs, which I truly believe are an important part of student life. Clubs give students the space to explore their interests, learn new skills, and grow in ways that the classroom alone cannot offer.<br><br>
+                    Greetings Everyone, <br><br>It gives me immense pleasure to introduce our school clubs, which I truly believe are an important part of student life. Clubs give students the space to explore their interests, learn new skills, and grow in ways that the classroom alone cannot offer.<br>
 
-As the Senior Mistress, I enjoy working closely with students and supporting their ideas and initiatives. I see clubs as places where confidence is built, leadership is discovered, and teamwork comes naturally. My aim is to ensure that every student feels encouraged to participate, express themselves freely, and make the most of the opportunities our clubs provide.<br><br>Warm Regards,<br>Shalini Ahuja,Senior Mistress
+As the Senior Mistress, I enjoy working closely with students and supporting their ideas and initiatives. I see clubs as places where confidence is built, leadership is discovered, and teamwork comes naturally. My aim is to ensure that every student feels encouraged to participate, express themselves freely, and make the most of the opportunities our clubs provide.<br><br>Warm Regards,<br>Shalini Ahuja, Senior Mistress
                 </p>
             </div>
         </div>
@@ -198,7 +198,7 @@ Every effort, big or small, adds up to a greener tomorrow.
 Together, we nurture nature — because the Earth is our shared home.<br><span onclick="window.open('environment.html')" class="dev"> </span></p>
             </div>
             <div class="mentor">
-                <a href="entrepreneurship.html"><img class="about-me-img" src="entreprenuership.jpeg"></a>
+                <a href="entrepreneurship.html"><img class="about-me-img" src="img/entreprenuership.jpeg"></a>
                 <h2 class = "headings-pg2" style = "font-size: 25px;">Entrepreneurship Club</h2>
                 <p class = "content-2">The Entrepreneurship Club sparks creativity, innovation, and business thinking in young minds.
 It gives students a platform to develop ideas, build startups, and learn leadership skills.
@@ -234,30 +234,3 @@ At the Science Club, curiosity is the first step toward invention.<br><span oncl
     </footer>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
