--- a/gallery.html
+++ b/gallery.html
@@ -86,35 +86,36 @@
     </header>
 <div class = "main-container">
     <!-- Content -->
-    <div class="Gallery">
-        <img src="img/IMG_2729.JPG">
-        <img src="img/IMG_2730.JPG">
-        <img src="img/IMG_2731.JPG">
-        <img src="img/IMG_2732.JPG">
-        <img src="img/IMG_2733.JPG">
-        <img src="img/IMG_2734.JPG">
-        <img src="img/IMG_2736.JPG">
-        <img src="img/IMG_2737.JPG">
-        <img src="img/IMG_2738.JPG">
-        <img src="img/IMG_2739.JPG">
-        <img src="img/IMG_2740.JPG">
-        <img src="img/IMG_2741.JPG">
-        <img src="img/IMG_2742.JPG">
-        <img src="img/IMG_2744.JPG">
-        <img src="img/IMG_2748.JPG">
-        <img src="img/IMG_2750.JPG">
-        <img src="img/IMG_2751.JPG">
-        <img src="img/IMG_2752.JPG">
-        <img src="img/IMG_2753.JPG">
-        <img src="img/IMG_2757.JPG">
-        <img src="img/IMG_2758.JPG">
-        <img src="img/IMG_2759.JPG">
-        <img src="img/IMG_2762.JPG">
-        <img src="img/IMG_2763.JPG">
-        <img src="img/WhatsApp Image 2025-11-19 at 3.08.20 PM.jpeg">
-        <img src="img/WhatsApp Image 2025-11-19 at 3.08.21 PM.jpeg">
-        <img src="img/WhatsApp Image 2025-11-19 at 3.08.22 PM.jpeg">
-        <img src="img/WhatsApp Image 2025-11-19 at 3.08.23 PM.jpeg">
+    <div class="gallery">
+        <img src="img/gallery/tech-club/lab-front.JPG">
+        <img src="img/gallery/tech-club/hamiz-lab.JPG">
+        <img src="img/gallery/tech-club/divyansh.JPG">
+        <img src="img/gallery/tech-club/div explaining.png">
+        <img src="img/gallery/tech-club/hamiz-on-chair.JPG">
+        <img src="img/gallery/tech-club/lab-back.JPG">
+        <img src="img/gallery/tech-club/classroom-students-happy.jpeg">
+        <img src="img/gallery/tech-club/otoao-in-lab.JPG">
+
+        <img src="img/gallery/comMUNity/ansh-gavel-hoist.JPG">
+        <img src="img/gallery/comMUNity/ansh-nafisa-mithali-gianna.JPG">
+        <img src="img/gallery/comMUNity/classroom.JPG">
+        <img src="img/gallery/comMUNity/gianna-ansh.JPG">
+        <img src="img/gallery/comMUNity/mathew-thinking.JPG">
+        <img src="img/gallery/comMUNity/sai-mogger.JPG">
+        <img src="img/gallery/comMUNity/top-view-min-benches.JPG">
+
+        <img src="img/gallery/science/kona-dishita.JPG">
+        <img src="img/gallery/science/closeupA.JPG">
+        <img src="img/gallery/science/closeupC.JPG">
+        <img src="img/gallery/science/closeupB.JPG">
+
+        <img src="img/gallery/roots/naresh-vaishak-b.JPG">
+        <img src="img/gallery/roots/secretariat.JPG">
+        <img src="img/gallery/roots/doubt.JPG">
+        <img src="img/gallery/roots/naresh-vaishak-a.JPG">
+        <img src="img/gallery/rythm/musicroom-a.jpeg">
+        <img src="img/gallery/rythm/musicroom-b.jpeg">
+        <img src="img/gallery/art-pallete.jpeg">
      </div>
 </div>
     <footer class="credts">
