--- a/events.html
+++ b/events.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Tech Club</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <link rel="icon" href="img/fvcn.png" type="image/png">
+    <link rel="icon" href="img/fvcn.png" type="img/fvcn.png">
 
     <!-- Montserrat -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
