--- a/art-pallete.html
+++ b/art-pallete.html
@@ -6,6 +6,14 @@
   <meta name="viewport" content="width=device-width">
   <title>Art Palette</title>
 
+  <!-- Inter -->
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+
   <!-- Fonts (cleaned) -->
   <link
     href="https://fonts.googleapis.com/css2?family=Fredoka:wght@500&family=Montserrat:wght@300;400;500;700&family=Inter:wght@300;400;500;600;700&family=Poppins:wght@300;400;500;600;700&display=swap"
@@ -29,7 +37,7 @@
     .mheader {
       display: flex;
       align-items: center;
-      justify-content: center;
+      justify-content: space-evenly;
       background-color: #fff192;
       border-bottom: 2px solid #fff192;
       border-radius: 50px;
@@ -44,7 +52,7 @@
 
     .mheader h1 {
       padding: 5px;
-      font-family: 'Fredoka', sans-serif;
+      font-family: 'Montserrat', sans-serif;
       font-size: 40px;
       cursor: pointer;
       margin: 0;
@@ -54,11 +62,11 @@
     h2 {
       text-align: center;
       margin-top: 20px;
-      font-size: 30px;
+      font-size: 27px;
     }
 
     .intro p {
-      font-family: Arial, Helvetica, sans-serif;
+      font-family: 'Inter', Helvetica, sans-serif;
       font-size: 22px;
       padding: 0 15px;
       text-align: center;
@@ -128,13 +136,24 @@
 
     .dev {
       color: #7CA2F9;
-      text-decoration: underline;
+      transition: all 0.17s;
       cursor: pointer;
     }
+
+    .dev:after {
+      content: "\2197"
+    }
+
+    .dev:hover {
+      text-decoration: underline;
+      transform: translateY(-4px);
+      opacity: 0.8;
+    }
+
     header img {
       width: 80px;
       border-radius: 50%;
-      border: 2px solid #4CCB7B;
+      /* border: 2px solid rgb(85, 68, 87); */
     }
   </style>
 
@@ -144,7 +163,7 @@
 
   <header class="mheader">
     <a href="https://schoolofindia.com" target="_blank">
-      <img class="soi-logo" src="img/soilogo.png">
+      <img class="soi-logo" src="img/art-pallete.png">
     </a>
     <h1 onclick="window.location.href='index.html'">ART PALETTE</h1>
   </header>
@@ -168,21 +187,21 @@
   <div class="mentors">
 
     <div class="mentor">
-      <img src="image/Kshitija.jpeg" style="object-position: top;">
-      <h2>Kshitija-President</h2>
+      <img src="img/Kshitija.jpeg" style="object-position: top;">
+      <h2>Kshitija | President</h2>
       <p>
 As the President of Art Palette, I see art as a form of expression rather than perfection. For me, it’s about ideas, emotions, and personal style. I want Art Palette to be a space where creativity feels comfortable, experimentation is encouraged, and every artist feels confident sharing their work. My aim is to help students grow, collaborate, and find their own artistic voice. Together, I hope to build a community where creativity is valued, supported, and constantly evolving.<br><br>Warm Regards,<br>Kshitija
       </p>
     </div>
 
     <div class="mentor">
-      <img src="image/Zoya.jpeg">
-      <h2>Butul Zaidi-Vice President</h2>
+      <img src="img/Zoya.jpeg">
+      <h2>Butul Zaidi | Vice President</h2>
       <p>
         "The pen is mightier than the sword” is a line I’ve heard since childhood, growing up with parents in law
         and a home where words carried weight. But even amid all that logic and legislation, the creative spark I
         carried from the moment I could hold a pencil was never dimmed.<br> Hey,<br>
-        I’m Butool-though most people know me as Zoya-and I have the honour of serving as the first Vice President
+        I’m Butool - though most people know me as Zoya-and I have the honour of serving as the first Vice President
         of Art for the Palette Club. With the support and encouragement I’ve received from my school, I’ve shaped
         that early spark into something meaningful,something I can share and give back through the work I do and the
         skills I continue to build.<br>
@@ -196,8 +215,8 @@ As the President of Art Palette, I see art as a form of expression rather than p
     </div>
 
     <div class="mentor">
-      <img src="image/Devanshi.jpeg">
-      <h2>Devanshi-Vice President</h2>
+      <img src="img/Devanshi.jpeg">
+      <h2>Devanshi | Vice President</h2>
       <p>
         Art, my dearest empathiser;
 For as long as I can remember, art has been more than a pastime. It has been my safe space, my language, and the way I’ve made sense of moments when I felt overwhelmed. Sketching, painting, crafting—each has carried me through different phases of my life, helping me understand myself better.<br>
