--- a/events.html
+++ b/events.html
@@ -84,16 +84,17 @@
             </div>
         </nav>
     </header>
+    <!-- Content -->
     <div class="main-container">
-        <!-- Content -->
         <div class="wrapper">
-            <h1 class="brnd-name" style="color: #C9D1D9; font-size: 50px;">
-                Coming Soon!
-            </h1>
-            <!-- <img src="Events poster.png"  style="display:block; margin:4rem auto; max-width:90%; width:700px; height:auto; border-radius:12px; box-shadow:0 10px 30px rgba(0,0,0,0.15);"> -->
+            <div class="glass-box">
+                <h1 class="brnd-name event-txt">
+                    Coming Soon!
+                </h1>
+            </div>
         </div>
     </div>
-    <footer class="credts">
+    <footer class="credts" style = "margin: 0;">
         <p>
             Developed by
             <span onclick="window.open('https://github.com/QuantumNeural')" class="dev">Divyansh</span>
