--- a/clubs.html
+++ b/clubs.html
@@ -208,7 +208,7 @@ Every idea is seen as a chance to make a difference in the world.
 At the Entrepreneurship Club, imagination meets opportunity to create success.<br><span onclick="window.open('entrepreneurship.html')" class="dev"> </span></p>
             </div>
             <div class="mentor">
-                <a href="science.html"><img class="about-me-img" src="img/SCI CLUB.jpeg"></a>
+                <a href="science.html"><img class="about-me-img" src="img/science-logo.jpeg"></a>
                 <h2 class = "headings-pg2" style = "font-size: 25px;">Science Club</h2>
                 <p class = "content-2">The Science Club ignites curiosity and a love for discovery among students.
 It encourages hands-on experiments, exploration, and learning beyond textbooks.
