--- a/roots-n-rythm.html
+++ b/roots-n-rythm.html
@@ -193,13 +193,8 @@ Warm Regards,<br>Anshika
                 <img class="about-me-img" src="img/Vaibhavii.jpg">
                 <h2 class = "headings-pg2" style = "font-size: 25px;">Vaibhavi-Secratary</h2>
                 <p class = "content-2">Hi Everyone, So I’m Vaibhavi Nideesh from Grade 9, and I’m the Secretary of our school’s Rhythm and Roots Club.
-                     Dance has always been my biggest passion,it’s where I find joy, confidence, and freedom to express myself.
-                     Being part of Rhythm and Roots has taught me teamwork, dedication, and discipline. As Secretary, I love helping organize events
-                      and keeping the energy of our club alive. It feels amazing to be surrounded by people who share the same love for dance.
-                     Dance inspires me to be better every single day. It teaches me patience, creativity, and the importance of never giving up.
-                      My goal is to keep growing as a dancer and to use my passion to motivate others. For me, dance isn’t just a hobby ,it’s a way 
-                      of life that brings happiness and meaning to everything I do.And I would like to express all my gratitude to those who helped
-                    me throughout this never ending journey. So this is your Vaibhavi Signing of <br>Warm Regards, 
+                    Dance has always been my biggest passion,it’s where I find joy, confidence, and freedom to express myself.
+                    Being part of Rhythm and Roots has taught me teamwork, dedication, and discipline. As Secretary, I love helping organize events and keeping the energy of our club alive. It feels amazing to be surrounded by people who share the same love for dance. Dance inspires me to be better every single day. It teaches me patience, creativity, and the importance of never giving up. My goal is to keep growing as a dancer and to use my passion to motivate others. For me, dance isn’t just a hobby ,it’s a way of life that brings happiness and meaning to everything I do.And I would like to express all my gratitude to those who helped me throughout this never ending journey. So this is your Vaibhavi Signing of <br>Warm Regards, 
                 <br>Thank You</p>
             </div>
             <div class="mentor">
@@ -212,15 +207,19 @@ Warm Regards,<br>Anshika
             </div>
     </div>
     <footer class="credts">
-    <p>
-      Developed by
-      <span onclick="window.open('https://github.com/QuantumNeural')" class="dev">Divyansh</span>
-      and
-      <span class="dev" onclick="window.open('https://github.com/Hamprogrammer', '_blank')">Hamiz</span>
-    </p>
-    <p style="font-size: 0.75rem;">Blueprinted by Vaibhavi And Dhruv</p>
-    <p style="font-size: 0.75rem;">&copy; 2025 School Of India, Tech Club</p>
-  </footer>
+        <p>
+            Developed by
+            <span onclick="window.open('https://github.com/QuantumNeural')" class="dev"
+                >Divyansh
+            </span>
+            and
+            <span class="dev" onclick="window.open('https://github.com/Hamprogrammer', '_blank')">
+                Hamiz
+            </span>
+        </p>
+        <p style="font-size: 0.75rem;">Blueprinted by Vaibhavi And Dhruv</p>
+        <p style="font-size: 0.75rem;">&copy; 2025 School Of India, Tech Club</p>
+    </footer>
 
     </body>
     </html>
